--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 streamlit==0.86.0
+cython==0.29.24
 pandas==0.25.3
 numpy==1.18.1
 scikit-learn==0.24.2
 fastai==1.0.61
+torch==1.9.0
+torchvision==0.10.0
