--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==0.86.0
-cython==0.29.24
-pandas==0.25.3
-numpy==1.18.1
-scikit-learn==0.24.2
 fastai==1.0.61
+numpy==1.19.5
+opencv_python==4.5.3.56
+Pillow==8.4.0
+streamlit==0.86.0
 torch==1.9.0
 torchvision==0.10.0
